--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,11 @@
   "name": "live-translate-socket-server",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "websocket": "^1.0.34"
   }
 }
